Adjusted package dependencies and naming

--- a/Assets/Package/Test/crener.dots.spline.Test.asmdef
+++ b/Assets/Package/Test/crener.dots.spline.Test.asmdef
@@ -1,8 +1,10 @@
 {
-    "name": "Game.Spline2.Editor",
+    "name": "crener.dots.spline.test",
     "references": [
         "GUID:fa04c97a3414f49458d045d5b69d4778",
-        "GUID:d8b63aba1907145bea998dd612889d6b"
+        "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:0acc523941302664db1f4e527237feb3",
+        "GUID:8819f35a0fc84499b990e90a4ca1911f"
     ],
     "includePlatforms": [
         "Editor"
@@ -12,7 +14,9 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
     "versionDefines": [],
     "noEngineReferences": false
 }
