--- a/Assets/Package/crener.dots.spline.asmdef
+++ b/Assets/Package/crener.dots.spline.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Dots.Spline",
+    "name": "crener.dots.spline",
     "references": [
         "GUID:734d92eba21c94caba915361bd5ac177",
         "GUID:e0cd26848372d4e5c891c569017e11f1",
