--- a/Assets/Package/package.json
+++ b/Assets/Package/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "com.crener.dots-splines",
+  "name": "com.crener.dots.spline",
   "displayName": "DOTS Splines",
-  "version": "0.8.0",
+  "version": "0.8.0-preview.1",
   "unity": "2019.3",
   "description": "Performant Dots Splines",
   "keywords": [
     "spline",
     "unity"
   ],
-  "category": "DOTS"
+  "category": "DOTS",
+  "dependencies": {
+    "com.unity.entites": "0.8.0-preview.8",
+    "com.unity.burst": "1.3.0-preview.5",
+    "com.unity.mathematics": "1.1.0",
+    "com.unity.jobs": "0.2.7-preview.11",
+    "com.unity.collections": "0.7.0-preview.2"
+  }
 }
