Added looping tests to the linear and linear cubic splines

--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,7 @@ ass2/
 
 *.csproj
 *.sln
+
+# Test run results
+Assets/Resources/PerformanceTestRunInfo.json
+Assets/Resources/PerformanceTestRunInfo.json.meta
