--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
+    "com.unity.entities": "0.16.0-preview.21",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
-    "com.unity.test-framework": "1.1.16",
+    "com.unity.test-framework": "1.1.18",
     "com.unity.timeline": "1.3.5",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
@@ -36,7 +37,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.unity.entities": "0.14.0-preview.19"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
