--- a/Test/crener.dots.spline.Test.asmdef
+++ b/Test/crener.dots.spline.Test.asmdef
@@ -4,7 +4,8 @@
         "GUID:fa04c97a3414f49458d045d5b69d4778",
         "GUID:d8b63aba1907145bea998dd612889d6b",
         "GUID:0acc523941302664db1f4e527237feb3",
-        "GUID:8819f35a0fc84499b990e90a4ca1911f"
+        "GUID:8819f35a0fc84499b990e90a4ca1911f",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [
         "Editor"
